# shuttle-rs

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md
.github/workflows/: publish.yaml  release-gateway-lxc.yaml  release-gateway-oci.yaml
crates/shuttle-app/: Cargo.toml
crates/shuttle-app/src/: lib.rs
crates/shuttle-context/: Cargo.toml
crates/shuttle-context/src/: lib.rs
crates/shuttle-core/: Cargo.toml
crates/shuttle-core/src/: lib.rs
crates/shuttle-mcp/: Cargo.toml
crates/shuttle-mcp/src/: lib.rs
crates/shuttle-memory/: Cargo.toml
crates/shuttle-memory/src/: lib.rs
crates/shuttle-mesh/: Cargo.toml
crates/shuttle-mesh/src/: lib.rs
crates/shuttle-message/: Cargo.toml
crates/shuttle-message/src/: lib.rs
crates/shuttle-store/: Cargo.toml
crates/shuttle-store/src/: lib.rs
crates/shuttle-sync/: Cargo.toml
crates/shuttle-sync/src/: lib.rs
crates/shuttle-task/: Cargo.toml
crates/shuttle-task/src/: lib.rs
crates/stl/: Cargo.toml
crates/stl/src/: main.rs
docs/: claude-code.md  codex.md  desktop-collaboration.md  opencode.md
examples/: projects.example.toml
gateway/: .gitignore  go.mod  go.sum
gateway/cmd/shuttle-gateway/: main.go
gateway/configs/: projects.example.toml
gateway/internal/api/: server.go  server_test.go
gateway/internal/auth/: auth.go  auth_test.go
gateway/internal/config/: config.go  config_test.go
gateway/internal/mcp/: server.go  server_test.go
gateway/internal/oauth/: oauth.go  oauth_test.go
gateway/internal/project/: project.go  project_test.go
gateway/internal/router/: service.go  service_test.go
gateway/internal/subprocess/: runner.go
packaging/lxc/: install.sh  projects.toml.example  shuttle-gateway.env.example  shuttle-gateway.service
packaging/oci/: Containerfile  projects.toml.example  shuttle-gateway.env.example
src/: app.rs  collab.rs  context.rs  core.rs  gateway.rs  lib.rs  mcp.rs  memory.rs  mesh.rs  message.rs  oauth.rs  store.rs  task.rs  telemetry.rs
src/adapter/: doc2lora.rs  embedding.rs  export.rs  merge.rs  mod.rs  registry.rs  select.rs
workers/shuttle-gateway/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts  wrangler.toml
workers/shuttle-gateway/migrations/: 0001_init.sql
workers/shuttle-gateway/src/: api.ts  auth.ts  database.ts  env.ts  errors.ts  http.ts  ids.ts  index.ts  mcp.ts  repository.ts  services.ts  types.ts
workers/shuttle-gateway/test/: api.test.ts  helpers.ts  mcp.test.ts  services.test.ts
