[package]
name = "shuttle-context"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
shuttle-core = { path = "../shuttle-core" }
shuttle-task = { path = "../shuttle-task" }

[dev-dependencies]
futures-executor.workspace = true
shuttle-store = { path = "../shuttle-store" }
tempfile.workspace = true
