[package]
name = "shuttle-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures-executor.workspace = true
serde.workspace = true
serde_json.workspace = true
shuttle-context = { path = "../shuttle-context" }
shuttle-core = { path = "../shuttle-core" }
shuttle-memory = { path = "../shuttle-memory" }
shuttle-message = { path = "../shuttle-message" }
shuttle-store = { path = "../shuttle-store" }
shuttle-task = { path = "../shuttle-task" }
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
