[package]
name = "shuttle-mesh"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
shuttle-core = { path = "../shuttle-core" }
shuttle-store = { path = "../shuttle-store" }

[dev-dependencies]
futures-executor.workspace = true
shuttle-memory = { path = "../shuttle-memory" }
shuttle-message = { path = "../shuttle-message" }
shuttle-task = { path = "../shuttle-task" }
tempfile.workspace = true
