[package]
name = "shuttle-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
shuttle-core = { path = "../shuttle-core" }
uuid.workspace = true

[dev-dependencies]
futures-executor.workspace = true
tempfile.workspace = true
