[package]
name = "shuttle-task"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true
shuttle-core = { path = "../shuttle-core" }
uuid.workspace = true

[dev-dependencies]
futures-executor.workspace = true
shuttle-store = { path = "../shuttle-store" }
tempfile.workspace = true
