[package]
name = "stl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "stl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures-executor.workspace = true
serde.workspace = true
serde_json.workspace = true
shuttle-core = { path = "../shuttle-core" }
shuttle-memory = { path = "../shuttle-memory" }
shuttle-message = { path = "../shuttle-message" }
shuttle-store = { path = "../shuttle-store" }
uuid.workspace = true
