[package]
name = "stl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "stl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures-executor.workspace = true
serde.workspace = true
serde_json.workspace = true
shuttle-app = { path = "../shuttle-app" }
shuttle-context = { path = "../shuttle-context" }
shuttle-core = { path = "../shuttle-core" }
shuttle-memory = { path = "../shuttle-memory" }
shuttle-message = { path = "../shuttle-message" }
shuttle-mesh = { path = "../shuttle-mesh" }
shuttle-mcp = { path = "../shuttle-mcp" }
shuttle-store = { path = "../shuttle-store" }
shuttle-task = { path = "../shuttle-task" }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
